# openclaw-starter-template

./: .dockerignore  .env.template  .gitignore  Dockerfile  README.md  agency.py  browser_launcher.sh  main.py  onboarding_config.py  onboarding_tool.py  openclaw-browser.desktop  openclaw_runtime_bootstrap.py  openclaw_template_helpers.py  prepare_openclaw_template.py  pyproject.toml  requirements.txt  shared_instructions.md  start_command.sh  test_openclaw_runtime_bootstrap.py
.claude/agents/: agent-creator.md  api-researcher.md  instructions-writer.md  prd-creator.md  qa-tester.md  tools-creator.md
.cursor/commands/: add-mcp.md  mcp-code-exec.md
.cursor/rules/: workflow.mdc
